# pog-bilder

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  README.md  build.rs  messages.proto
server/: Cargo.toml  build.rs  pog_bilder.nimble
server/src/: args.rs  big_file.rs  client.rs  db.rs  lib.rs  main.rs  reader_buffer.rs  sync_reader.rs
server/src/basic_client/: basic_client.rs
src/: main.rs
ui/: README.md  app.slint  message.slint  pubspec.yaml  requestPermissionAndCreateFile
ui/android/app/: build.gradle
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/pogbilder/: MainActivity.kt
ui/assets/: sampel.json
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: demo.dart  main.dart  main1.dart
ui/lib/pages/: Login.dart  settings.dart  user.json
ui/linux/: CMakeLists.txt  my_application.cc
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
