[package]
name = "pog_bilder"
version = "0.1.0"
edition = "2021"
authors = ["Vescusia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen = ">=3.3.0"
protoc-bin-vendored = ">=3.0.0"

[dependencies]
protobuf = ">=3.3.0"
bytes = ">=1.5.0"
tokio = { version = "1.33.0", features = ["rt", "net", "sync", "io-util", "io-std", "macros", "time" ] }
clap = { version = ">=4.4.7", features = ["derive"] }
